--- a/pom.xml
+++ b/pom.xml
@@ -62,6 +62,14 @@
             <artifactId>spring-boot-starter-data-redis</artifactId>
             <version>3.4.3</version>
         </dependency>
+
+        <!-- https://mvnrepository.com/artifact/mysql/mysql-connector-java -->
+        <dependency>
+            <groupId>mysql</groupId>
+            <artifactId>mysql-connector-java</artifactId>
+            <version>8.0.33</version>
+        </dependency>
+
     </dependencies>
 
     <build>
