--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,4 +1,11 @@
 spring.application.name=redis
 
+# Redis ????
 spring.data.redis.host=localhost
 spring.data.redis.port=6379
+
+# MySQL ????
+spring.datasource.url=jdbc:mysql://127.0.0.1:3306/redis?useUnicode=true&characterEncoding=utf-8&serverTimezone=Asia/Taipei
+spring.datasource.username=root
+spring.datasource.password=root123
+spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
