feat: add MyBatis-Plus

--- a/pom.xml
+++ b/pom.xml
@@ -70,6 +70,13 @@
             <version>8.0.33</version>
         </dependency>
 
+        <!-- ＭyBatis-Plus -->
+        <dependency>
+            <groupId>com.baomidou</groupId>
+            <artifactId>mybatis-plus-spring-boot3-starter</artifactId>
+            <version>3.5.10.1</version>
+        </dependency>
+
     </dependencies>
 
     <build>
