--- a/pom.xml
+++ b/pom.xml
@@ -77,6 +77,14 @@
             <version>3.5.10.1</version>
         </dependency>
 
+        <!-- Hutool All -->
+        <dependency>
+            <groupId>cn.hutool</groupId>
+            <artifactId>hutool-all</artifactId>
+            <version>5.8.36</version>
+        </dependency>
+
+
     </dependencies>
 
     <build>
