--- a/pom.xml
+++ b/pom.xml
@@ -84,6 +84,14 @@
             <version>5.8.36</version>
         </dependency>
 
+        <!-- 代理 -->
+        <dependency>
+            <groupId>org.aspectj</groupId>
+            <artifactId>aspectjweaver</artifactId>
+            <version>1.9.23</version>
+            <scope>runtime</scope>
+        </dependency>
+
 
     </dependencies>
 
