--- a/pom.xml
+++ b/pom.xml
@@ -92,6 +92,13 @@
             <scope>runtime</scope>
         </dependency>
 
+        <!-- Redisson -->
+        <dependency>
+            <groupId>org.redisson</groupId>
+            <artifactId>redisson</artifactId>
+            <version>3.45.1</version>
+        </dependency>
+
 
     </dependencies>
 
